--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       </div>
       <div class="switch">
         <p>Dark Mode</p>
-        <button class="toggle">
+        <div role="button" class="toggle">
           <div class="circle"></div>
-        </button>
+        </div>
       </div>
     </header>
     <div class="top_pattern"></div>
     <main>
-      <button class="section facebook">
+      <div role="button" class="section facebook">
         <div class="box">
           <img src="images/icon-facebook.svg" alt="facebook">
           <p class="card heading">@nathanf</p>
@@ -38,8 +38,8 @@
           <img class="arrow" src="images/icon-up.svg" alt="icon-up">
           <p class="green">12 Today</p>
         </div>
-      </button>
-      <button class="section twitter">
+      </div>
+      <div role="button" class="section twitter">
         <div class="box">
           <img src="images/icon-twitter.svg" alt="twitter">
           <p class="card heading">@nathanf</p>
@@ -50,8 +50,8 @@
           <img class="arrow" src="images/icon-up.svg" alt="icon-up">
           <p class="green">99 Today</p>
         </div>
-      </button>
-      <button class="section instagram">
+      </div>
+      <div role="button" class="section instagram">
         <div class="box">
           <img src="images/icon-instagram.svg" alt="instagram">
           <p class="card heading">@realnathanf</p>
@@ -62,8 +62,8 @@
           <img class="arrow" src="images/icon-up.svg" alt="icon-up">
           <p class="green">1099 Today</p>
         </div>
-      </button>
-      <button class="section youtube">
+      </div>
+      <div role="button" class="section youtube">
         <div class="box">
           <img src="images/icon-youtube.svg" alt="youtube">
           <p class="card heading">Nathan F.</p>
@@ -74,12 +74,12 @@
           <img class="arrow" src="images/icon-down.svg" alt="icon-down">
           <p class="red">144 Today</p>
         </div>
-      </button>
+      </div>
     </main>
 
     <h2>Overview - Today</h2>
     <article>
-      <button class="section">
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Page Views</p>
           <img src="images/icon-facebook.svg" alt="facebook">
@@ -91,8 +91,8 @@
             <p class="green">3%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Likes</p>
           <img src="images/icon-facebook.svg" alt="facebook">
@@ -104,8 +104,8 @@
             <p class="red">2%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Likes</p>
           <img src="images/icon-instagram.svg" alt="instagram">
@@ -117,8 +117,8 @@
             <p class="green">2257%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Profile Views</p>
           <img src="images/icon-instagram.svg" alt="instagram">
@@ -130,8 +130,8 @@
             <p class="green">1375%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Retweets</p>
           <img src="images/icon-twitter.svg" alt="twitter">
@@ -143,8 +143,8 @@
             <p class="green">303%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Likes</p>
           <img src="images/icon-twitter.svg" alt="twitter">
@@ -156,8 +156,8 @@
             <p class="green">553%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Likes</p>
           <img src="images/icon-youtube.svg" alt="youtube">
@@ -169,8 +169,8 @@
             <p class="red">19%</p>
           </div>
         </div>
-      </button>
-      <button class="section">
+      </div>
+      <div role="button" class="section">
         <div class="flex">
           <p class="heading">Total Views</p>
           <img src="images/icon-youtube.svg" alt="youtube">
@@ -182,7 +182,7 @@
             <p class="red">12%</p>
           </div>
         </div>
-      </button>
+      </div>
     </article>
   </div>
   <div class=" attribution">
